<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cry_cur"
                    android:textColor="#ffc9c122"
                    android:textSize="18sp"
                    android:id="@+id/currency_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/price_rate"
                    android:text="@string/price_per"
                    android:textSize="18sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/volume"
                android:text="@string/vol_sometext"
                android:textColor="#ffc9c122"
                android:layout_alignParentRight="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:layout_weight="1"
                    android:textColor="#FFF2E945"
                    android:id="@+id/time"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/supplier"
                    android:textColor="#ffc9c122"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:id="@+id/supplier"/>
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>