<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.original_tech.cryptoconverter.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        card_view:cardCornerRadius="10dp"
        card_view:contentPadding="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ac"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="#ffc9c122"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/crypto_currency_logo"
                android:layout_margin="10dp"
                android:src="@drawable/bitcoin"
                android:layout_gravity="center"/>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_margin="10dp"
                    />
            </android.support.v7.widget.CardView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/currency_logo"
                android:layout_margin="10dp"
                android:src="@drawable/usd"
                android:layout_gravity="center"/>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner2"
                    android:layout_margin="10dp"
                    />
            </android.support.v7.widget.CardView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/create"
                android:textColor="#ffffff"
                android:id="@+id/create_clicked"
                android:layout_gravity="center"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"
        android:layout_gravity="center_horizontal"
        android:scrollbars="vertical"
        android:layout_below="@+id/card_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_message"
        android:layout_gravity="center"
        android:id="@+id/intro_message"
        android:visibility="invisible"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/cc_loading_indicator"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:id="@+id/cc_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_below="@+id/card_view"
        android:layout_centerHorizontal="true"/>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/add_card"
        android:src="@drawable/ic_action_new"/>
</RelativeLayout>